vtracks as last posted to sourceforge
This required changing some %a's to %m's in vtracks.c, as we're apparently
compiled in such a way that sscanf no longer accepts %a.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -48,6 +48,8 @@ grip_SOURCES =         \
 	eggtrayicon.c \
 	eggtrayicon.h \
 	tray.c \
-	tray.h 
+	tray.h \
+	vtracks.c \
+	vtracks.h
 
 grip_LDADD = @TERMINAL_WIDGET_LIBS@ $(CDPAR_LIBS) $(ID3_LIBS)
